fix: dark theme Updated By Github Actions

--- a/css/material-dashboard/theme.scss
+++ b/css/material-dashboard/theme.scss
@@ -27,7 +27,7 @@
 @import "mixins/mixins";
 
 // Core Components - extra styling
-@import "alert";
+// @import "alert";
 @import "avatars";
 @import "badge";
 @import "buttons";
@@ -38,7 +38,7 @@
 @import "dropup";
 @import "header";
 @import "fixed-plugin";
-@import "forms/forms";
+// @import "forms/forms";
 @import "footer";
 @import "gradients";
 @import "icons";
@@ -48,15 +48,15 @@
 @import "navbar-vertical";
 @import "nav";
 @import "pagination";
-@import "popovers";
+// @import "popovers";
 @import "progress";
-@import "rtl";
-@import "ripple";
+// @import "rtl";
+// @import "ripple";
 @import "social-buttons";
 @import "tables";
 @import "timeline";
-@import "tilt";
-@import "tooltips";
+// @import "tilt";
+// @import "tooltips";
 @import "typography";
 
 // Plugins
