fix: docsearch condition Updated By Github Actions

--- a/css/index.css
+++ b/css/index.css
@@ -958,40 +958,40 @@ div[class^=col-] {
   margin-bottom: 5px;
 }
 .page-tag > a:nth-child(1n) {
-  color: #8e234a !important;
-  font-size: 1.126rem !important;
+  color: #e16693 !important;
+  font-size: 1.285rem !important;
 }
 .page-tag > a:nth-child(2n) {
-  color: #6ab7c2 !important;
-  font-size: 1.249rem !important;
+  color: #ceae60 !important;
+  font-size: 1.084rem !important;
 }
 .page-tag > a:nth-child(3n) {
-  color: #9bdc85 !important;
-  font-size: 1.177rem !important;
+  color: #e43aac !important;
+  font-size: 1.228rem !important;
 }
 .page-tag > a:nth-child(4n) {
-  color: #063dc6 !important;
-  font-size: 1.117rem !important;
+  color: #310585 !important;
+  font-size: 1.123rem !important;
 }
 .page-tag > a:nth-child(5n) {
-  color: #09dfb1 !important;
-  font-size: 1.207rem !important;
+  color: #242534 !important;
+  font-size: 1.09rem !important;
 }
 .page-tag > a:nth-child(6n) {
-  color: #3284b4 !important;
-  font-size: 1.213rem !important;
+  color: #73d218 !important;
+  font-size: 1.087rem !important;
 }
 .page-tag > a:nth-child(7n) {
-  color: #54db7a !important;
-  font-size: 1.024rem !important;
+  color: #ea4405 !important;
+  font-size: 1.213rem !important;
 }
 .page-tag > a:nth-child(8n) {
-  color: #2a1185 !important;
-  font-size: 1.066rem !important;
+  color: #a18efb !important;
+  font-size: 1.273rem !important;
 }
 .page-tag > a:nth-child(9n) {
-  color: #acc658 !important;
-  font-size: 1.243rem !important;
+  color: #7e2b35 !important;
+  font-size: 1.021rem !important;
 }
 .page-card {
   padding: 15px 10px 15px;
